commit translated contents

--- a/Apps/TOC.yml
+++ b/Apps/TOC.yml
@@ -237,7 +237,7 @@
           href: teams/technologies-openmind-inc-les-berrycast.md
         - name: Bigfish
           href: teams/breathe-india-advisors-pvt-ltd-bigfish.md
-        - name: ELearning de Maiores Cérebros
+        - name: ELearning Maiores Cérebros
           href: teams/biggerbrains-bigger-brains-elearning.md
         - name: Bizfone
           href: teams/mobikom-bizfone.md
@@ -255,7 +255,7 @@
           href: teams/breakthru.md
         - name: Votações Brilhante
           href: teams/chat-apps-llc-bright-poll.md
-        - name: Bright Remind Me
+        - name: Brilhante Me Lembre
           href: teams/chat-apps-llc-bright-remind-me.md
         - name: Brightidea
           href: teams/brightidea.md
@@ -275,7 +275,7 @@
           href: teams/chimu-software-catchem.md
         - name: Centrical
           href: teams/biz-effective-centrical.md
-        - name: Controle de Tempo de Cronoscope
+        - name: Controle de Tempo de Cronoscópio
           href: teams/chrono-innovation-chronoscope-time-tracking.md
         - name: Chronus
           href: teams/chronus.md
@@ -289,9 +289,9 @@
           href: teams/clever-ads.md
         - name: ClipTraining
           href: teams/cliptraining.md
-        - name: Cloud Effective
+        - name: Nuvem Eficaz
           href: teams/cloud-effective.md
-        - name: Cloud Hub
+        - name: hub de Nuvem
           href: teams/atwork-gmbh-cloud-hub.md
         - name: Cloverpop
           href: teams/cloverpop.md
@@ -309,19 +309,19 @@
           href: teams/cauzey-pty-ltd-complish.md
         - name: Conferences i/o
           href: teams/conferences-io.md
-        - name: Nuvem de confluência
+        - name: Nuvem de Confluência
           href: teams/atlassian-confluence-cloud.md
         - name: Connect+
           href: teams/reward-gateway-connectplus.md
         - name: Contact Center
           href: teams/landis-technologies-llc-contact-center.md
-        - name: Contextere AVA
+        - name: Contexto AVA
           href: teams/contextere-ava.md
-        - name: CSOD Learn
+        - name: CSOD Aprender
           href: teams/cornerstone-ondemand-csod-learn.md
         - name: Treinamento Cuco
           href: teams/cuckoo-networks-oy-workout.md
-        - name: Conexão
+        - name: Cultr Conexão
           href: teams/cultr-connect.md
         - name: Cyberday
           href: teams/digiturvamalli-cyberday.md
@@ -359,7 +359,7 @@
           href: teams/eloops.md
         - name: Email TeamMate
           href: teams/harmonie-email-teammate.md
-        - name: email-texting
+        - name: email-mensagem de texto
           href: teams/voice-elements-corporation-email-texting.md
         - name: Indicações de Funcionários
           href: teams/recruitday-inc-employee-referrals.md
@@ -381,13 +381,13 @@
           href: teams/evocom-informationssysteme-gmbh.md
         - name: ezTeam
           href: teams/enterprizid-inc-ezteam.md
-        - name: Nuvem da Fabasoft
+        - name: Nuvem Fabasoft
           href: teams/fabasoft-austria-gmbh-cloud.md
         - name: Colega
           href: teams/fellow-insights-inc.md
-        - name: '50'
+        - name: Cinquenta
           href: teams/fifty.md
-        - name: File Fabric
+        - name: Arquivo Tecido
           href: teams/storage-made-easy-file-fabric.md
         - name: FloQast
           href: teams/floqast.md
@@ -417,7 +417,7 @@
           href: teams/freevolut-ltd-google-analytics-insights.md
         - name: GoToConnect
           href: teams/logmein-inc-gotoconnect.md
-        - name: Livro de Endereços de Grupo - NextSet
+        - name: Grupo Catálogo de Endereços - NextSet
           href: teams/nextsetinc-group-address-book-nextset.md
         - name: GroupLotse
           href: teams/controlex-gmbh-grouplotse.md
@@ -445,6 +445,8 @@
           href: teams/hunchbuzz.md
         - name: Hyperproof
           href: teams/hyperproof.md
+        - name: Em caso de crise
+          href: teams/rockdove-solutions-inc-in-case-of-crisis.md
         - name: IndustryIntel
           href: teams/industry-intelligence-team-industryintel.md
         - name: InStation
@@ -479,7 +481,7 @@
           href: teams/ltapps-software-coltd-leave-request-by.md
         - name: Lexion
           href: teams/lexion.md
-        - name: Localizador de Link
+        - name: Link Spotter
           href: teams/communardo-products-link-spotter.md
         - name: Listy
           href: teams/information-age-technologies-listy.md
@@ -487,7 +489,7 @@
           href: teams/social-intents-live-chat.md
         - name: LMS365
           href: teams/elearningforce-international-lms365.md
-        - name: Loops - Criação Learning
+        - name: Loops - Aprendizado criativo
           href: teams/skooler-loops-creative-learning.md
         - name: Lucidchart
           href: teams/lucid-software-lucidchart.md
@@ -507,9 +509,9 @@
           href: teams/medxnote-mt.md
         - name: MeisterTask
           href: teams/meisterlabs-gmbh-meistertask.md
-        - name: Idemômetro
+        - name: Mentimeter
           href: teams/mentimeter.md
-        - name: Lembrete de mensagem
+        - name: Lembrete de Mensagem
           href: teams/missing-message-reminder.md
         - name: Micromate
           href: teams/paixon-gmbh-micromate.md
@@ -529,6 +531,8 @@
           href: teams/fest-technologies-llc-monitask.md
         - name: Avançar o trabalho com Jira
           href: teams/move-work-forward-with-jira.md
+        - name: LTAPPs do Processo de Aprovação Multi
+          href: teams/ltapps-software-coltd-multi-approval-process.md
         - name: MURAL
           href: teams/mural.md
         - name: Mybys
@@ -545,7 +549,7 @@
           href: teams/regroove-solutions-navo.md
         - name: NE
           href: teams/ne.md
-        - name: Neelix.Team
+        - name: Neelix. Equipe
           href: teams/neelixio-neelixteam.md
         - name: netDocShare
           href: teams/kl-software-technologies-netdocshare.md
@@ -553,6 +557,8 @@
           href: teams/newtech-newcos.md
         - name: ngDesk
           href: teams/all-blue-solutions-ngdesk.md
+        - name: NickNack
+          href: teams/nicknack-ltd.md
         - name: Now Virtual Agent
           href: teams/servicenow-now-virtual-agent.md
         - name: Nugget
@@ -577,7 +583,7 @@
           href: teams/qburst-technologies-pvt-ltd-package-notifier.md
         - name: PandaDoc
           href: teams/pandadoc.md
-        - name: ParkHere Corporate
+        - name: ParkHere Corporativo
           href: teams/parkhere-gmbh-corporate.md
         - name: Wiki perfeito por RD17
           href: teams/ooo-rd17-perfect-wiki-by.md
@@ -593,7 +599,7 @@
           href: teams/polly.md
         - name: PostBeyond
           href: teams/postbeyond.md
-        - name: Teams
+        - name: Powell Teams
           href: teams/powell-software-teams.md
         - name: Colaboração do Power BI
           href: teams/ataira-power-bi-collaboration.md
@@ -603,7 +609,7 @@
           href: teams/appfluence-inc-priority-matrix.md
         - name: ProdBot
           href: teams/prodoscore-prodbot.md
-        - name: Project Migrator
+        - name: Projeto Migrator
           href: teams/fluentpro-software-corporation-project-migrator.md
         - name: Projectplace
           href: teams/planview-inc-projectplace.md
@@ -649,6 +655,8 @@
           href: teams/researchspace-rspace.md
         - name: Saberr
           href: teams/saberr.md
+        - name: Cofre Espaços
+          href: teams/ecare-vault-inc-safe-spaces.md
         - name: Sailpoint
           href: teams/sailpoint-technologies-inc.md
         - name: SalesTim
@@ -705,11 +713,11 @@
           href: teams/soapbox.md
         - name: Sobol
           href: teams/missing-sobol.md
-        - name: Sociabble
+        - name: Sociável
           href: teams/sociabble.md
         - name: Advocacia Social
           href: teams/oktopost-social-advocacy.md
-        - name: Standup espacial
+        - name: Standup Espacial
           href: teams/high-fidelity-inc-spatial-standup.md
         - name: Spinify
           href: teams/spinify.md
@@ -759,7 +767,7 @@
           href: teams/ityss-tamplo.md
         - name: TaskList
           href: teams/limestat-inc-tasklist.md
-        - name: Teamble
+        - name: Equipe
           href: teams/teamble.md
         - name: Bot de Verificação de Integridade do TeaMe
           href: teams/missing-teame-health-check-bot.md
@@ -779,7 +787,7 @@
           href: teams/teamschamp.md
         - name: TeamSticker por Communitio
           href: teams/communitio-corporation-teamsticker-by.md
-        - name: TELUS Business Conexão
+        - name: Conexão TELUS Business
           href: teams/ringcentral-inc-telus-business-connect.md
         - name: Template Chooser
           href: teams/officeatwork-template-chooser.md
@@ -823,7 +831,7 @@
           href: teams/cisco-webex-call.md
         - name: Weekly10
           href: teams/binary-geek-limited-weekly10.md
-        - name: Treinador de Bem-estar
+        - name: Orientador de Bem-estar
           href: teams/meditationlive-inc-wellness-coach.md
         - name: Wide Ideas
           href: teams/wide-ideas.md
@@ -837,7 +845,7 @@
           href: teams/workboard-inc.md
         - name: Workday
           href: teams/workday.md
-        - name: WorkJam Home
+        - name: Página Inicial WorkJam
           href: teams/workjam-home.md
         - name: Agendar WorkJam
           href: teams/workjam-schedule.md
@@ -845,10 +853,14 @@
           href: teams/workplacebuddy.md
         - name: Wunder365
           href: teams/jiji-technologies-pvt-ltd-wunder365.md
+        - name: SALA X0PA
+          href: teams/x0pa-ai-singapore-room.md
         - name: YAROOMS
           href: teams/yarooms.md
         - name: Yeeflow
           href: teams/akmii-yeeflow.md
+        - name: Zignals
+          href: teams/alight-zignals.md
         - name: Zoho CRM
           href: teams/zoho-corporation-pvt-ltd-crm.md
         - name: Zoho Desk
