commit translated contents

--- a/Apps/TOC.yml
+++ b/Apps/TOC.yml
@@ -351,6 +351,8 @@
           href: teams/gifted-to-you-limited-collection-pot.md
         - name: Comandante
           href: teams/nimbella-commander.md
+        - name: Navegador da Empresa
+          href: teams/konica-minolta-it-solutions-company-navigator.md
         - name: Concluir
           href: teams/cauzey-pty-ltd-complish.md
         - name: Conferences i/o
@@ -457,6 +459,8 @@
           href: teams/fifty.md
         - name: Arquivo Tecido
           href: teams/storage-made-easy-file-fabric.md
+        - name: Fireflies AI
+          href: teams/firefliesai-fireflies-ai.md
         - name: FireWatch
           href: teams/infographics-uk-ltd-firewatch.md
         - name: FloQast
@@ -681,6 +685,8 @@
           href: teams/nulia-works.md
         - name: OfficeAmp
           href: teams/anaek-inc-officeamp.md
+        - name: Trabalho híbrido do OfficeRnD
+          href: teams/officernd-hybrid-work.md
         - name: OfficeSpace
           href: teams/officespace-software.md
         - name: Officevibe
@@ -835,6 +841,8 @@
           href: teams/pipe9com-skills-by-pipe9.md
         - name: Skillsoft Percipio
           href: teams/skillsoft-percipio.md
+        - name: Skoach
+          href: teams/cultify-lda-skoach.md
         - name: SkyPoint Cloud
           href: teams/skypoint-cloud-inc.md
         - name: Slido
@@ -935,7 +943,7 @@
           href: teams/teamschamp.md
         - name: TeamSticker por Communitio
           href: teams/communitio-corporation-teamsticker-by.md
-        - name: Teamwork
+        - name: Trabalho em equipe
           href: teams/teamwork.md
         - name: Conexão TELUS Business
           href: teams/ringcentral-inc-telus-business-connect.md
