--- a/Apps/TOC.yml
+++ b/Apps/TOC.yml
@@ -599,6 +599,8 @@
           href: teams/mindsets-learning.md
         - name: MIPA - seu Assistente Pessoal
           href: teams/iglobe-mipa-your-personal-assistant.md
+        - name: Miro
+          href: teams/miro.md
         - name: monday.com
           href: teams/mondaycom.md
         - name: Moneypenny
