--- a/Apps/TOC.yml
+++ b/Apps/TOC.yml
@@ -579,6 +579,8 @@
           href: teams/survivef5-gmbh-kudozza.md
         - name: Kunjani
           href: teams/faceboard-pty-ltd-kunjani.md
+        - name: Learnbee
+          href: teams/bsharp-sales-enablers-learnbee.md
         - name: Lexion
           href: teams/lexion.md
         - name: LifeWorks
@@ -903,7 +905,7 @@
           href: teams/ityss-tamplo.md
         - name: Taskworld
           href: teams/taskworld.md
-        - name: Central de Equipe
+        - name: Team Central
           href: teams/atlassian-inc-team-central.md
         - name: Team Tracker
           href: teams/team-tracker-ltd.md
