commit translated contents

--- a/Apps/TOC.yml
+++ b/Apps/TOC.yml
@@ -869,6 +869,8 @@
           href: teams/price-monitor.md
         - name: Priority Matrix
           href: teams/appfluence-inc-priority-matrix.md
+        - name: Rua do Processo
+          href: teams/process-street.md
         - name: Proconnect para o Sitecore
           href: teams/subramanian-ramanathan-proconnect-for-sitecore.md
         - name: ProdBot
@@ -1289,6 +1291,8 @@
           href: saas/officeatwork-content-chooser-browser.md
         - name: Designer
           href: saas/officeatwork-designer.md
+        - name: Gravação de chamada unificada do Batuletor para Microsoft Teams
+          href: saas/dubber-corp-unified-call-recording-for-microsoft-teams.md
         - name: Emailgistics
           href: saas/emailgistics-corp.md
         - name: EmailNotes para Outlook
