commit translated contents

--- a/Apps/TOC.yml
+++ b/Apps/TOC.yml
@@ -1343,6 +1343,8 @@
           href: saas/content-guru-storm-cloud-contact-center-teams-integration.md
         - name: Conector de Microsoft Teams Talkdesk
           href: saas/talkdesk-inc-microsoft-teams-connector.md
+        - name: TeamOrgChart
+          href: saas/teamimprovercom-ltd-teamorgchart.md
         - name: Template Chooser
           href: saas/officeatwork-template-chooser.md
         - name: Navegador do Selador de Modelo
