commit translated contents

--- a/Apps/TOC.yml
+++ b/Apps/TOC.yml
@@ -1176,6 +1176,8 @@ items:
         href: teams/oktopost-social-advocacy.md
       - name: Solo
         href: teams/teladoc-inc-solo.md
+      - name: Soundbite&#8482;
+        href: teams/soundbite-inc.md
       - name: SQQ
         href: teams/superquickquestion-sqq.md
       - name: Squadcast
@@ -1336,7 +1338,7 @@ items:
         href: teams/uservoice.md
       - name: Vacation Tracker
         href: teams/vacation-tracker.md
-      - name: Verso
+      - name: Versebook
         href: teams/versebook.md
       - name: Verto 365
         href: teams/tmi-systems-verto-365.md
